OpenLDAP 2.3 Change Log

OpenLDAP 2.3.35 Engineering
	Fixed entry consistency check in str2entry2 (ITS#4852)
	Fixed str2anlist handling of undefined attrs/OCs (ITS#4854)
	Fixed zero-length IA5string handling (ITS#4823)
	Fixed slapd-bdb/hdb startup with missing shm env (ITS#4851)
	Fixed slapd-ldap/meta consistency in referral proxying (ITS#4861)
	Fixed slapd-meta search cleanup
	Fixed slapd-meta/slapo-rwm filter mapping
	Fixed slapd-sql subtree shortcut (ITS#4856)
	Fixed slapo-refint config message (ITS#4853)
	Fixed libldap time_t signedness (ITS#4872)
	Fixed libldap_r tpool reset (ITS#4855)

OpenLDAP 2.3.34 Release (2007/02/16)
	Fixed libldap missing get_option(TLS CipherSuite) (ITS#4815)
	Fixed ldapmodify printing error from ldap_result() (ITS#4812)
	Fixed slapadd LDIF parsing (ITS#4817)
	Fixed slapd libltdl link ordering (ITS#4830)
	Fixed slapd syncrepl memory leaks (ITS#4805)
	Fixed slapd dynacl/ACI compatibility with 2.1
	Fixed slapd-bdb/hdb be_entry_get with aliases/referrals (ITS#4810)
	Fixed slapd-ldap more response handling bugs (ITS#4782)
	Fixed slapd-ldap C-API code tests (ITS#4808)
	Fixed slapd-monitor NULL printf (ITS#4811)
	Fixed slapo-chain spurious additional info in response (ITS#4828)
	Fixed slapo-syncprov presence list (ITS#4813)
	Fixed slapo-syncprov contextCSN checkpoint again (ITS#4720)
	Added slapo-ppolicy cn=config support (ITS#4836)
	Added slapo-auditlog cn=config support
	Build environment
		Added Berkeley DB 4.5 detection
	Documentation
		Note slapo-dynlist interaction with manageDSAit (ITS#4831)

OpenLDAP 2.3.33 Release (2007/01/17)
	Fixed slapd syncrepl error logging with delta-syncrepl
	Fixed slapd-ldap/meta privileged conn caching (ITS#4547)
	Fixed slapd-ldap chase-referrals switch (ITS#4557)
	Fixed slapd-ldap bind behavior when idassert is always used (ITS#4781)
	Fixed slapd-ldap response handling bugs (ITS#4782)
	Fixed slapd-ldap idassert mode=self anonymous ops (ITS#4798)